<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

    <RelativeLayout
            android:id="@+id/upperLayout"
            android:layout_width="match_parent"
                    android:layout_height="wrap_content">


        <CheckBox
                android:id="@+id/viewMoreCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/view_more_button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:layout_centerVertical="true"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_toLeftOf="@+id/viewMoreCB"
                      android:layout_centerVertical="true"
        android:gravity="center_vertical">

        <LinearLayout android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_margin="10dp">

            <com.millet.planet.customViews.textviews.MediumTextView
                    android:id="@+id/nameHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"/>

            <com.millet.planet.customViews.textviews.RegularTextView
                    android:id="@+id/itemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/milletPlanet"
                    android:textSize="15sp"/>

        </LinearLayout>


        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:orientation="vertical"
                      android:id="@+id/authorLayout">

            <com.millet.planet.customViews.textviews.MediumTextView
                    android:id="@+id/authorHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textColor="@color/colorPrimaryDark"/>

            <com.millet.planet.customViews.textviews.RegularTextView
                    android:id="@+id/authorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/milletPlanet"
                    android:textSize="15sp"/>

        </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

        <RelativeLayout
                android:id="@+id/moreOptionsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/upperLayout">

            <View
                    android:id="@+id/seprator"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/black"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"/>


            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_centerVertical="true"
                          android:layout_margin="10dp"
                          android:id="@+id/imageLayout"
                          android:layout_below="@+id/seprator">

                <ImageView android:layout_width="match_parent"
                           android:layout_height="100dp"
                           android:id="@+id/sourceId"
                           android:src="@mipmap/small_logo"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_centerVertical="true"
                          android:layout_marginLeft="10dp"
                          android:layout_marginRight="10dp"
                          android:layout_marginBottom="10dp"
                          android:layout_below="@+id/imageLayout"
                          android:id="@+id/istructionLayout">

                <com.millet.planet.customViews.textviews.MediumTextView
                        android:id="@+id/juiceHeader2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/colorPrimaryDark"/>


                <WebView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></WebView>


            </LinearLayout>


            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_centerVertical="true"
                          android:layout_marginLeft="10dp"
                          android:layout_marginRight="10dp"
                          android:layout_marginBottom="10dp"
                          android:id="@+id/morInfoLayout"
                          android:layout_below="@+id/istructionLayout">

                <com.millet.planet.customViews.textviews.MediumTextView
                        android:id="@+id/protocolHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moreInfo"
                        android:textColor="@color/colorPrimaryDark"/>

                <com.millet.planet.customViews.textviews.RegularTextView
                        android:id="@+id/moreInfoLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/milletPlanet"
                        android:textSize="15sp"/>

            </LinearLayout>




        </RelativeLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>